[package]
name = "nano-blog-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
actix-files = "0.6.5"
actix-multipart = "0.6.1"
chrono = "0.4.31"
futures-util = "0.3.30"
uuid = { version = "1.6.1", features = ["v4"] }
num_cpus = "1.16.0"
argon2 = "0.5.3"
